feat(course-service): completed api create course with category